# hello_m5_cardputer_adv

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml
docs/: architecture.md  cardputer_adv_code_documentation_es.md  cardputer_adv_espidf_platformio_guide.md  creating-a-new-project-from-template.md  flashing.md  getting-started.md  hardware-overview.md  hardware.md  pinout.md  smoke-tests.md  template-usage.md  testing.md  troubleshooting.md
docs/audits/: template-readiness-audit.md
docs/peripherals/: audio-es8311.md  audio.md  battery.md  display-st7789.md  display.md  i2c.md  imu-bmi270.md  imu.md  ir.md  keyboard-tca8418.md  keyboard.md  lvgl.md  microsd.md  sd-card.md  usb-tinyusb.md  usb.md  wireless.md
include/: README.md
src/: CMakeLists.txt  main.cpp
src/app/: App.cpp  App.hpp  AppEvents.hpp  AppState.hpp
src/apps/smoke_tests/: SmokeTests.cpp  SmokeTests.hpp
src/hardware/: BatteryMonitor.cpp  BatteryMonitor.hpp  Bmi270Imu.cpp  Bmi270Imu.hpp  BoardPins.hpp  Es8311Codec.cpp  Es8311Codec.hpp  ExtBus.hpp  GrovePort.hpp  I2CBus.cpp  I2CBus.hpp  I2SAudio.cpp  I2SAudio.hpp  IrTransmitter.cpp  IrTransmitter.hpp  SdCard.cpp  SdCard.hpp  St7789Display.cpp  St7789Display.hpp  Tca8418Keyboard.cpp  Tca8418Keyboard.hpp
src/services/: BleService.cpp  BleService.hpp  README.md  UsbService.cpp  UsbService.hpp  WifiService.cpp  WifiService.hpp
src/ui/: LvglPort.cpp  LvglPort.hpp  README.md  UiPort.cpp  UiPort.hpp
test/: README.md
test/test_common/: test_main.cpp
(+3 files in other folders)
